--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<html>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
+<head>
+    <style>
+    .center {
+        text-align: center;
+    }
+    </style>
+</head>
+
+
+<body>
+	<nav>
+		<ul class = "nav-bar">
+			<li class="nav-link"><a href = "https://www.facebook.com/">Home Page</a></li>
+			<li class="nav-link"><a href = "https://www.facebook.com/">Resume</a></li>
+			<li class="nav-link"><a href = "https://www.facebook.com/">Projects</a></li>
+		</ul>
+	</nav>
+
+	<div class = "information">
+		<div class="info-text">
+            <div class="col-xs-12 center">
+                <br /><br /><br /> <h1>About Me</h1>
+            </div>
+            <div>
+            	<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/">Promoboxx</a> and <a href = "http://www.hksl.com.hk/">Hong Kong Systems Limited</a>. <br />
+            	I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
+            </div>
+        </div>
+	</div>
+
+		
+</body>
+
+</html>
