--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-xs-12 center">
                 <br /><br /><br /> <h1>About Me</h1>
             </div>
-            <div>
+            <div class="col-xs-12 center">
             	<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/">Promoboxx</a> and <a href = "http://www.hksl.com.hk/">Hong Kong Systems Limited</a>. <br />
             	I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
             </div>
