added background transition, reformatted layout, added social media links

--- a/index.html
+++ b/index.html
@@ -1,37 +1,58 @@
 <html>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <head>
-    <style>
-    .center {
-        text-align: center;
-    }
-    </style>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<style>
+		.center {
+			text-align: center;
+		}
+	</style>
 </head>
 
 
-<body>
+<body class="body">
 	<nav>
-		<ul class = "nav-bar">
+		<ul class = "col-xs-12 nav-bar">
 			<li class="nav-link"><a href = "https://www.facebook.com/">Home Page</a></li>
 			<li class="nav-link"><a href = "https://www.facebook.com/">Resume</a></li>
 			<li class="nav-link"><a href = "https://www.facebook.com/">Projects</a></li>
 		</ul>
 	</nav>
 
-	<div class = "information">
-		<div class="info-text">
-            <div class="col-xs-12 center">
-                <br /><br /><br /> <h1>About Me</h1>
-            </div>
-            <div class="col-xs-12 center">
-            	<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/">Promoboxx</a> and <a href = "http://www.hksl.com.hk/">Hong Kong Systems Limited</a>. <br />
-            	I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
-            </div>
-        </div>
+	<div class="info-text">
+		<div class="col-xs-12 center">
+			<h1>About Me</h1>
+		</div>
 	</div>
 
-		
+	<div class = "info-row">
+		<div class="col-xs-3 col-md-3"></div>
+		<div class="col-xs-2 col-md-2 photo">
+			<img src="DSC06667-2.jpg" style="width:180px;height:250px;">
+		</div>
+		<div class="col-xs-4 col-md-4 info-text" style="padding-left:40px; padding-top:20px">
+			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/">Promoboxx</a> and <a href = "http://www.hksl.com.hk/">Hong Kong Systems Limited</a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
+
+			<div class="media">
+
+			<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true">
+			</a>	
+
+			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"></a>		
+			</div>
+
+	</div>
+
+
 </body>
 
 </html>
