added projects page still needs work

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="body">
 	<nav>
 		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "https://www.facebook.com/">Projects</a></li>
+			<li class="nav-link"><a href = "work.html">Projects</a></li>
 			<li class="nav-link"><a href = "Resources\Resume.pdf">Resume</a></li>
 			<li class="nav-link"><a href = "index.html">Home Page</a></li>
 		</ul>
@@ -48,6 +48,11 @@
 			</a>	
 
 			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"></a>		
+			</div>
+
+			<div class = "col-xs-12">
+							<footer> © Thomas Cheong 2020</footer>
+
 			</div>
 
 	</div>
