basic website setup done

--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
 			<li class="nav-link"><a href = "Resources\Resume.pdf">Resume</a></li>
 			<li class="nav-link"><a href = "index.html">Home Page</a></li>
 		</ul>
-	</nav>
+		</nav>
 
 		<div class="col-xs-12 center">
 			<h1>Projects</h1>
@@ -34,19 +34,33 @@
 		</div> 
 
 		<div class = "work">
-			<a href="Resources\marble-solitaire.html">
-			<img src="Resources\marble-solitaire.jpg" alt="marble img">
-			</a>
-			<img src="Resources\tba.png" alt="tba img"> 
-			<img src="Resources\tba.png" alt="tba img"> 
-			<img src="Resources\tba.png" alt="tba img"> 
-			<p>Marble Solitaire</p><p>TBA: Project 2</p><p>TBA: Project 3</p><p>TBA: Project 4</p>
+			<div class="proj-with-text">
+				<a href="Resources\marble-solitaire.html">
+				<img src="Resources\marble-solitaire.jpg" alt="marble img">
+				</a>
+				<p>Marble Solitaire</p>
+			</div>
+
+			<div class = "proj-with-text">
+				<img src="Resources\tba.png" alt="tba img"> 
+				<p>TBA: Project 2</p>
+			</div>
+
+			<div class = "proj-with-text">
+				<img src="Resources\tba.png" alt="tba img"> 
+				<p>TBA: Project 3</p>
+			</div>
+
+			<div class = "proj-with-text">
+				<img src="Resources\tba.png" alt="tba img"> 
+				<p>TBA: Project 4</p>
+			</div>
 		</div>
 
 
-		<footer>
-			<p>© Thomas Cheong 2020</p>
-		</footer>
+		<div class = "col-xs-12">
+		<footer> <br /><br /><br />© 2020 by Thomas Cheong</footer>
+		</div>
 
 	</div>
 
