--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
 
 			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"></a>		
 			</div>
+		</div>
+	</div>
 
-			<div class = "col-xs-12">
-							<footer> © Thomas Cheong 2020</footer>
-
-			</div>
-
+	<div class = "col-xs-12">
+		<footer>© 2020 by Thomas Cheong</footer>
 	</div>
 
 
