format layout edits

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<img src="Resources\DSC06667-2.jpg" style="width:230px;height:310px;">
 		</div>
 		<div class="col-xs-5 col-md-4 info-text" style="padding-left:40px; padding-top:40px">
-			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/">Promoboxx</a> and <a href = "http://www.hksl.com.hk/">Hong Kong Systems Limited</a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
+			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
 			<div class="media">
 
