added project detail pages

--- a/healthtrak.html
+++ b/healthtrak.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" type="text/css" href="work-style.css">
+<link rel="stylesheet" type="text/css" href="project-style.css">
 <head>
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,34 +28,31 @@
 		</ul>
 		</nav>
 
+		<div class = "back-button">
+			<a href="work.html">< Back </a>
+		</div>
+
 		<div class="col-xs-12 center">
-			<h1>Projects</h1>
-			<p>Here are some projects that I have worked on</p>
+			<h1>HealthTrak: Virtual Health Assistant</h1>
 		</div> 
 
 		<div class = "work">
-			<div class="proj-with-text">
-				<a href="solitaire.html">
-				<img src="Resources\marble-solitaire.jpg" alt="marble img">
+			<div class="col-xs-12 center proj-with-text">
+				<a href="https://github.com/tommycheong07/HackathonHealthapp">
+				<img src="Resources\HealthTrak.jpg" alt="healthtrak img">
 				</a>
-				<p>Marble Solitaire</p>
 			</div>
-
-			<div class = "proj-with-text">
-				<a href="healthtrak.html">
-				<img src="Resources\HealthTrak.jpg" alt="tba img"> 
-				</a>
-				<p>HealthTrak: Virtual Health Assistant</p>
+			<div class = "project-text"> 
+				<div class = "col-xs-4"></div>
+				<div class = "col-xs-4">
+					<p>This was my first hackathon<a href="https://github.com/tommycheong07/HackathonHealthapp"> <b><u>project</u></b> </a> in which the theme was a health related hack. The project was made using Xcode. One of the most important issues in the medical industry, when an individual is sick, is to monitor their vitals and to ensure they take the right dosage of medication which we often don't set a reminder and guess when to take it during the day. With all that in mind, this concept app design is intended to help the medical community, especially the patients, to monitor their health and give timely reminders to take medication. As a fallback option, it also alerts family members when the patient's health deteriorates.</p>
+				</div>
+				<div class = "col-xs-4"></div>
 			</div>
-
-			<div class = "proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 3</p>
-			</div>
-
-			<div class = "proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 4</p>
+			<div class = "col-xs-12 center recording">
+				<iframe width="400" height="250"
+					src = "https://www.youtube.com/embed/u7vTiFsO6sA">
+				</iframe>
 			</div>
 		</div>
 
