--- a/solitaire.html
+++ b/solitaire.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" type="text/css" href="work-style.css">
+<link rel="stylesheet" type="text/css" href="project-style.css">
 <head>
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,34 +28,31 @@
 		</ul>
 		</nav>
 
+		<div class = "back-button">
+			<a href="work.html">< Back </a>
+		</div>
+
 		<div class="col-xs-12 center">
-			<h1>Projects</h1>
-			<p>Here are some projects that I have worked on</p>
+			<h1>Marble Solitaire</h1>
 		</div> 
 
 		<div class = "work">
-			<div class="proj-with-text">
-				<a href="solitaire.html">
+			<div class="col-xs-12 center proj-with-text">
+				<a href="Resources\marble-solitaire.html">
 				<img src="Resources\marble-solitaire.jpg" alt="marble img">
 				</a>
-				<p>Marble Solitaire</p>
 			</div>
-
-			<div class = "proj-with-text">
-				<a href="healthtrak.html">
-				<img src="Resources\HealthTrak.jpg" alt="tba img"> 
-				</a>
-				<p>HealthTrak: Virtual Health Assistant</p>
+			<div class = "project-text"> 
+				<div class = "col-xs-4"></div>
+				<div class = "col-xs-4">
+					<p>This <a href="Resources\marble-solitaire.html"> <b><u>project</u></b> </a> was for my object oriented design class. The project was made using Java and JavaScript. This is a game of marble solitaire where the user can choose the width of the board and select a peg to jump over another peg into an empty slot to remove the peg that was jumped over. The goal of the game is to only have one peg remaining.</p>
+				</div>
+				<div class = "col-xs-4"></div>
 			</div>
-
-			<div class = "proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 3</p>
-			</div>
-
-			<div class = "proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 4</p>
+			<div class = "col-xs-12 center recording">
+				<video width="250" height="250" autoplay>
+					<source src="Resources\solitaire-rec.mp4" type="video/mp4">
+				</video>
 			</div>
 		</div>
 
