added new tab function along with small fixes

--- a/healthtrak.html
+++ b/healthtrak.html
@@ -23,7 +23,7 @@
 		<nav>
 		<ul class = "col-xs-12 nav-bar">
 			<li class="nav-link"><a href = "work.html">Projects</a></li>
-			<li class="nav-link"><a href = "Resources\Resume.pdf">Resume</a></li>
+			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
 			<li class="nav-link"><a href = "index.html">Home</a></li>
 		</ul>
 		</nav>
