--- a/solitaire.html
+++ b/solitaire.html
@@ -23,7 +23,7 @@
 		<nav>
 		<ul class = "col-xs-12 nav-bar">
 			<li class="nav-link"><a href = "work.html">Projects</a></li>
-			<li class="nav-link"><a href = "Resources\Resume.pdf">Resume</a></li>
+			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
 			<li class="nav-link"><a href = "index.html">Home</a></li>
 		</ul>
 		</nav>
@@ -38,7 +38,7 @@
 
 		<div class = "work">
 			<div class="col-xs-12 center proj-with-text">
-				<a href="Resources\marble-solitaire.html">
+				<a href="Resources\marble-solitaire.html" target="_blank">
 				<img src="Resources\marble-solitaire.jpg" alt="marble img">
 				</a>
 			</div>
@@ -50,7 +50,7 @@
 				<div class = "col-xs-4"></div>
 			</div>
 			<div class = "col-xs-12 center recording">
-				<video width="250" height="250" autoplay>
+				<video width="250" height="250" autoplay loop>
 					<source src="Resources\solitaire-rec.mp4" type="video/mp4">
 				</video>
 			</div>
