updated projects page

--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
 
 			<div class = "proj-with-text">
 				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 3</p>
+				<p>In Progress: Snake Game</p>
 			</div>
 
 			<div class = "proj-with-text">
