--- a/home.html
+++ b/home.html
@@ -22,9 +22,9 @@
 <body class="body">
 	<nav>
 		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "work.html">Projects</a></li>
+			<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
-			<li class="nav-link"><a href = "index.html">Home</a></li>
+			<li class="nav-link"><a href = "home.html">Home</a></li>
 		</ul>
 	</nav>
 
@@ -37,7 +37,7 @@
 	<div class = "info-row">
 		<div class="col-xs-3 col-md-3"></div>
 		<div class="col-xs-3 col-md-2 photo">
-			<img src="Resources\DSC06667-2.jpg" style="width:230px;height:310px;">
+			<img src="Resources\DSC06667-2.jpg" style="width:210px;height:310px;">
 		</div>
 		<div class="col-xs-5 col-md-4 info-text" style="padding-left:40px; padding-top:40px">
 			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
