--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,9 @@
 	<div class = "wrapper">
 		<nav>
 		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "work.html">Projects</a></li>
+			<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
-			<li class="nav-link"><a href = "index.html">Home</a></li>
+			<li class="nav-link"><a href = "home.html">Home</a></li>
 		</ul>
 		</nav>
 
