--- a/healthtrak.html
+++ b/healthtrak.html
@@ -29,7 +29,7 @@
 		</nav>
 
 		<div class = "back-button">
-			<a href="work.html">< Back </a>
+			<a href="projects.html">< Back </a>
 		</div>
 
 		<div class="col-xs-12 center">
