index name change

--- a/healthtrak.html
+++ b/healthtrak.html
@@ -21,11 +21,11 @@
 <body>
 	<div class = "wrapper">
 		<nav>
-		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "projects.html">Projects</a></li>
-			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
-			<li class="nav-link"><a href = "home.html">Home</a></li>
-		</ul>
+			<ul class = "col-xs-12 nav-bar">
+				<li class="nav-link"><a href = "projects.html">Projects</a></li>
+				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+				<li class="nav-link"><a href = "index.html">Home</a></li>
+			</ul>
 		</nav>
 
 		<div class = "back-button">
