--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<ul class = "col-xs-12 nav-bar">
 			<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
-			<li class="nav-link"><a href = "home.html">Home</a></li>
+			<li class="nav-link"><a href = "index.html">Home</a></li>
 		</ul>
 	</nav>
 
