--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 			<img src="Resources\DSC06667-2.jpg" style="width:210px;height:310px;">
 		</div>
 		<div class="col-xs-5 col-md-4 info-text" style="padding-left:40px; padding-top:40px">
-			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
+			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
 			<div class="media">
 
-			<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true">
+			<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true"target="_blank">
 			</a>	
 
-			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"></a>		
+			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"target="_blank"></a>		
 			</div>
 		</div>
 	</div>
