--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="body">
 	<nav>
 		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "projects">Projects</a></li>
+			<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
 			<li class="nav-link"><a href = "/">Home</a></li>
 		</ul>
