updated screen formatting for phone/tablet/desktop

--- a/projects.html
+++ b/projects.html
@@ -33,27 +33,27 @@
 			<p>Here are some projects that I have worked on</p>
 		</div> 
 
-		<div class = "work">
-			<div class="proj-with-text">
+		<div class = "work center">
+			<div class="col-xs-12 col-sm-6 col-md-3 proj-with-text">
 				<a href="solitaire.html">
-				<img src="Resources\marble-solitaire.jpg" alt="marble img">
+				<img src="Resources\marble-solitaire.jpg" class="img-center" alt="marble img">
 				</a>
 				<p>Marble Solitaire</p>
 			</div>
 
-			<div class = "proj-with-text">
+			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
 				<a href="healthtrak.html">
-				<img src="Resources\HealthTrak.jpg" alt="tba img"> 
+				<img src="Resources\HealthTrak.jpg" class="img-center" alt="tba img"> 
 				</a>
 				<p>HealthTrak: Virtual Health Assistant</p>
 			</div>
 
-			<div class = "proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>In Progress: Movie/TV Recommendation</p>
+			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
+				<img src="Resources\tba.png" class="img-center" alt="tba img"> 
+				<p>In Progress: Movie Recommendation</p>
 			</div>
 
-			<div class = "proj-with-text">
+			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
 				<img src="Resources\tba.png" alt="tba img"> 
 				<p>TBA: Project 4</p>
 			</div>
