layout changes and font changes

--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
 			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
 			<div class="media">
+				<div class="col-xs-3">
+					<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true"target="_blank">
+					</a>	
+				</div>
 
-			<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true"target="_blank">
-			</a>	
-
-			<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"target="_blank"></a>		
+				<div class="col-xs-3">
+					<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"target="_blank">
+					</a>	
+				</div>	
 			</div>
 		</div>
 	</div>
