--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 		.center {
 			text-align: center;
 		}
+		.right {
+			text-align: right;
+		}
+		.left {
+			text-align: left;
+		}
 	</style>
 </head>
 
@@ -36,19 +42,19 @@
 
 	<div class = "info-row">
 		<div class="col-xs-3 col-sm-3 col-md-3"></div>
-		<div class="col-xs-3 col-sm-3 col-md-3 photo">
+		<div class="col-xs-3 col-sm-12 center col-md-3 photo">
 			<img src="Resources\DSC06667-2.jpg">
 		</div>
-		<div class="col-xs-4 col-sm-4 col-md-3 info-text" style=" padding-top:40px">
+		<div class="col-xs-4 col-sm-12 center col-md-3 info-text" style=" padding-top:40px">
 			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
-			<div class="media">
-				<div class="col-xs-3">
+			<div class="media center">
+				<div class="col-xs-3 col-sm-6 right col-md-4">
 					<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true"target="_blank">
 					</a>	
 				</div>
 
-				<div class="col-xs-3">
+				<div class="col-xs-3 col-sm-1 left col-md-4">
 					<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"target="_blank">
 					</a>	
 				</div>	
