--- a/healthtrak.html
+++ b/healthtrak.html
@@ -1,6 +1,8 @@
 <html>
 <link rel="stylesheet" type="text/css" href="project-style.css">
 <head>
+	<meta name="viewport" content="width=device-width">
+
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -21,10 +23,10 @@
 <body>
 	<div class = "wrapper">
 		<nav>
-			<ul class = "col-xs-12 nav-bar">
-				<li class="nav-link"><a href = "projects.html">Projects</a></li>
-				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+			<ul type="" class = "col-xs-12 nav-bar">
 				<li class="nav-link"><a href = "/">Home</a></li>
+				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+				<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			</ul>
 		</nav>
 
@@ -43,14 +45,14 @@
 				</a>
 			</div>
 			<div class = "project-text"> 
-				<div class = "col-xs-4"></div>
-				<div class = "col-xs-4">
+				<div class = "col-xs-2 col-lg-3"></div>
+				<div class = "col-xs-8 col-lg-6 center">
 					<p>This was my first hackathon<a href="https://github.com/tommycheong07/HackathonHealthapp"> <b><u>project</u></b> </a> in which the theme was a health related hack. The project was made using Xcode. One of the most important issues in the medical industry, when an individual is sick, is to monitor their vitals and to ensure they take the right dosage of medication which we often don't set a reminder and guess when to take it during the day. With all that in mind, this concept app design is intended to help the medical community, especially the patients, to monitor their health and give timely reminders to take medication. As a fallback option, it also alerts family members when the patient's health deteriorates.</p>
 				</div>
-				<div class = "col-xs-4"></div>
+				<div class = "col-xs-2 col-lg-3"></div>
 			</div>
 			<div class = "col-xs-12 center recording">
-				<iframe width="400" height="250"
+				<iframe width="350px" height="200px"
 					src = "https://www.youtube.com/embed/u7vTiFsO6sA">
 				</iframe>
 			</div>
