--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
-<link rel="stylesheet" type="text/css" href="style.css">
-
 <head>
+	<meta name="viewport" content="width=device-width">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -11,6 +10,9 @@
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<style>
 		.center {
 			text-align: center;
@@ -27,34 +29,35 @@
 
 <body class="body">
 	<nav>
-		<ul class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "projects.html">Projects</a></li>
-			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+		<ul type="" class = "col-xs-12 nav-bar">
 			<li class="nav-link"><a href = "/">Home</a></li>
+			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+			<li class="nav-link"><a href = "projects.html">Projects</a></li>
 		</ul>
 	</nav>
 
-	<div class="info-text">
+
+	<div class="title">
 		<div class="col-xs-12 center">
 			<h1>About Me</h1>
 		</div>
 	</div>
 
 	<div class = "info-row">
-		<div class="col-xs-3 col-sm-3 col-md-3"></div>
-		<div class="col-xs-3 col-sm-12 center col-md-3 photo">
+		<div class="col-sm-3 col-md-3"></div>
+		<div class="col-sm-12 center col-md-12 col-lg-3 photo">
 			<img src="Resources\DSC06667-2.jpg">
 		</div>
-		<div class="col-xs-4 col-sm-12 center col-md-3 info-text" style=" padding-top:40px">
+			<div class="col-xs-12 col-md-12 col-lg-3 info-text center" style=" padding-top:30px">
 			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
 			<div class="media center">
-				<div class="col-xs-3 col-sm-6 right col-md-4">
+				<div class="col-xs-6 col-md-6 col-lg-4 center">
 					<a href="https://www.linkedin.com/in/thomas-cheong/" class="fa fa-linkedin" aria-hidden="true"target="_blank">
 					</a>	
 				</div>
 
-				<div class="col-xs-3 col-sm-1 left col-md-4">
+				<div class="col-xs-6 col-md-6 col-lg-4 center">
 					<a href="https://github.com/tommycheong07" class="fa fa-github" aria-hidden="true"target="_blank">
 					</a>	
 				</div>	
