--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <html>
 <link rel="stylesheet" type="text/css" href="work-style.css">
 <head>
+	<meta name="viewport" content="width=device-width">
+
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -21,10 +23,10 @@
 <body>
 	<div class = "wrapper">
 		<nav>
-			<ul class = "col-xs-12 nav-bar">
-				<li class="nav-link"><a href = "projects.html">Projects</a></li>
-				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+			<ul type="" class = "col-xs-12 nav-bar">
 				<li class="nav-link"><a href = "/">Home</a></li>
+				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+				<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			</ul>
 		</nav>
 
@@ -34,26 +36,26 @@
 		</div> 
 
 		<div class = "work center">
-			<div class="col-xs-12 col-sm-6 col-md-3 proj-with-text">
+			<div class="col-xs-12 col-md-6 col-lg-3 proj-with-text">
 				<a href="solitaire.html">
 				<img src="Resources\marble-solitaire.jpg" class="img-center" alt="marble img">
 				</a>
 				<p>Marble Solitaire</p>
 			</div>
 
-			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
+			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
 				<a href="healthtrak.html">
 				<img src="Resources\HealthTrak.jpg" class="img-center" alt="tba img"> 
 				</a>
 				<p>HealthTrak: Virtual Health Assistant</p>
 			</div>
 
-			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
+			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
 				<img src="Resources\tba.png" class="img-center" alt="tba img"> 
 				<p>In Progress: Movie Recommendation</p>
 			</div>
 
-			<div class = "col-xs-12 col-sm-6 col-md-3 proj-with-text">
+			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
 				<img src="Resources\tba.png" alt="tba img"> 
 				<p>TBA: Project 4</p>
 			</div>
