--- a/solitaire.html
+++ b/solitaire.html
@@ -1,6 +1,8 @@
 <html>
 <link rel="stylesheet" type="text/css" href="project-style.css">
 <head>
+	<meta name="viewport" content="width=device-width">
+
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -21,10 +23,10 @@
 <body>
 	<div class = "wrapper">
 		<nav>
-			<ul class = "col-xs-12 nav-bar">
-				<li class="nav-link"><a href = "projects.html">Projects</a></li>
-				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+			<ul type="" class = "col-xs-12 nav-bar">
 				<li class="nav-link"><a href = "/">Home</a></li>
+				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+				<li class="nav-link"><a href = "projects.html">Projects</a></li>
 			</ul>
 		</nav>
 
@@ -43,11 +45,11 @@
 				</a>
 			</div>
 			<div class = "project-text"> 
-				<div class = "col-xs-4"></div>
-				<div class = "col-xs-4">
+				<div class = "col-xs-2 col-lg-3"></div>
+				<div class = "col-xs-8 col-lg-6 center">
 					<p>This <a href="Resources\marble-solitaire.html"> <b><u>project</u></b> </a> was for my object oriented design class. The project was made using Java and JavaScript. This is a game of marble solitaire where the user can choose the width of the board and select a peg to jump over another peg into an empty slot to remove the peg that was jumped over. The goal of the game is to only have one peg remaining.</p>
 				</div>
-				<div class = "col-xs-4"></div>
+				<div class = "col-xs-2 col-lg-3"></div>
 			</div>
 			<div class = "col-xs-12 center recording">
 				<video width="250" height="250" autoplay loop>
