fixed column issue where nav bar was not accessible

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 
 
 <body class="body">
-	<nav>
-		<ul type="" class = "col-xs-12 nav-bar">
-			<li class="nav-link"><a href = "/">Home</a></li>
-			<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
-			<li class="nav-link"><a href = "projects.html">Projects</a></li>
-		</ul>
-	</nav>
+	<div>
+		<nav>
+			<ul type="" class = "col-xs-12 nav-bar">
+				<li class="nav-link"><a href = "/">Home</a></li>
+				<li class="nav-link"><a href = "Resources\Resume.pdf" target="_blank">Resume</a></li>
+				<li class="nav-link"><a href = "projects.html">Projects</a></li>
+			</ul>
+		</nav>
+	</div>
 
 
 	<div class="title">
@@ -43,7 +45,7 @@
 		</div>
 	</div>
 
-	<div class = "info-row">
+	<div class = "col-xs-12 info-row">
 		<div class="col-sm-3 col-md-3"></div>
 		<div class="col-sm-12 center col-md-12 col-lg-3 photo">
 			<img src="Resources\DSC06667-2.jpg">
