fixed solitaire autoplay video as well as back buttons

--- a/healthtrak.html
+++ b/healthtrak.html
@@ -30,7 +30,7 @@
 			</ul>
 		</nav>
 
-		<div class = "back-button">
+		<div class = "col-xs-12 back-button" style="padding-left: 10%">
 			<a href="projects.html">< Back </a>
 		</div>
 
