--- a/solitaire.html
+++ b/solitaire.html
@@ -52,7 +52,7 @@
 				<div class = "col-xs-2 col-lg-3"></div>
 			</div>
 			<div class = "col-xs-12 center recording">
-				<video width="250" height="250" autoplay loop>
+				<video width="250" height="250" autoplay loop muted>
 					<source src="Resources\solitaire-rec.mp4" type="video/mp4">
 				</video>
 			</div>
