added new finished project

--- a/projects.html
+++ b/projects.html
@@ -45,14 +45,16 @@
 
 			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
 				<a href="healthtrak.html">
-				<img src="Resources\HealthTrak.jpg" class="img-center" alt="tba img"> 
+				<img src="Resources\HealthTrak.jpg" class="img-center" alt="healthTrak img"> 
 				</a>
 				<p>HealthTrak: Virtual Health Assistant</p>
 			</div>
 
 			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<img src="Resources\tba.png" class="img-center" alt="tba img"> 
-				<p>In Progress: Movie Recommendation</p>
+				<a href="movieRec.html">
+				<img src="Resources\movieRec.png" class="img-center" alt="movieRec img"> 
+				</a>
+				<p>Movie Recommendation</p>
 			</div>
 
 			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
