--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<img src="Resources\DSC06667-2.jpg">
 		</div>
 			<div class="col-xs-12 col-md-12 col-lg-3 info-text center" style=" padding-top:30px">
-			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
+			<p>Hi! My name is Thomas Cheong. I am currently studying Computer Science and Business Administration with a Concentration in Finance at Northeastern University. I have interned at <a href = "https://www.mercari.com/"target="_blank"><b><u>Mercari US</u></b></a>, <a href = "https://promoboxx.com/"target="_blank"><b><u>Promoboxx</u></b></a> and <a href = "http://www.hksl.com.hk/"target="_blank"><b><u>Hong Kong Systems Limited</u></b></a>. I am continuously searching for opportunities to grow and expand my knowledge in software development. Outside of my studies, I enjoy playing basketball, volleyball, as well as weights training. </p>
 
 			<div class="media center">
 				<div class="col-xs-6 col-md-6 col-lg-4 center">
