--- a/movieRec.html
+++ b/movieRec.html
@@ -38,7 +38,7 @@
 			<h1>Movie Recommendation App</h1>
 		</div> 
 
-		<div class = "work">
+		<div class="large-work">
 			<div class="col-xs-12 center proj-with-text">
 				<a href="https://github.com/tommycheong07/MovieRecommendation" target="_blank">
 				<img src="Resources\movieRec.png" alt="movieRec img">
