--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,10 @@
 			</div>
 
 			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<img src="Resources\tba.png" alt="tba img"> 
-				<p>TBA: Project 4</p>
+				<a href="dataVis.html">
+				<img src="Resources\DataVis.png" alt="DataVis img"> 
+				</a>
+				<p>Philadelphia Food Delivery Data Visualization</p>
 			</div>
 		</div>
 
