updated projects layout

--- a/projects.html
+++ b/projects.html
@@ -35,34 +35,58 @@
 			<p>Here are some projects that I have worked on</p>
 		</div> 
 
-		<div class = "work center">
-			<div class="col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<a href="solitaire.html">
-				<img src="Resources\marble-solitaire.jpg" class="img-center" alt="marble img">
-				</a>
-				<p>Marble Solitaire</p>
-			</div>
+		<div class = "projects-list">
+			<a href="solitaire.html">
+				<div class="project-row">
+					<div class="col-md-4 col-sm-4 proj">
+						<img src="Resources\marble-solitaire.jpg" class="proj-img" alt="marble img">
+					</div>
+					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
+						<div class="preview-title">Marble Solitaire</div>
+						<div class="preview-tech">Java, JavaScript</div>
+						<div class="preview-summary">The project was made using Java and JavaScript. This is a game of marble solitaire where the user can choose the width of the board and select a peg to jump over another peg into an empty slot to remove the peg that was jumped over.</div>
+					</div>
+				</div>
+			</a>
 
-			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<a href="healthtrak.html">
-				<img src="Resources\HealthTrak.jpg" class="img-center" alt="healthTrak img"> 
-				</a>
-				<p>HealthTrak: Virtual Health Assistant</p>
-			</div>
+			<a href="healthtrak.html">
+				<div class="project-row">
+					<div class="col-md-4 col-sm-4 proj">
+						<img src="Resources\HealthTrak.jpg" class="proj-img" alt="healthTrak img"> 
+					</div>
+					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
+						<div class="preview-title">HealthTrak: Virtual Health Assistant</div>
+						<div class="preview-tech">Xcode</div>
+						<div class="preview-summary">This was my first hackathon project in which the theme was a health related hack. This concept app design is intended to help the medical community, especially the patients, to monitor their health and give timely reminders to take medication. As a fallback option, it also alerts family members when the patient's health deteriorates.</div>
+					</div>
+				</div>
+			</a>
 
-			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<a href="movieRec.html">
-				<img src="Resources\movieRec.png" class="img-center" alt="movieRec img"> 
-				</a>
-				<p>Movie Recommendation</p>
-			</div>
+			<a href="movieRec.html">
+				<div class="project-row">
+					<div class="col-md-4 col-sm-4 proj">
+						<img src="Resources\movieRec.png" class="proj-img" alt="movieRec img"> 
+					</div>
+					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
+						<div class="preview-title">Movie Recommendation App</div>
+						<div class="preview-tech">Python, HTML, CSS, MySQL</div>
+						<div class="preview-summary">This movie recommendation app recommends movies to users based on actors and genres selected. Then recommends additional movies that the user may like based on other actors that were in the recommended listings. </div>
+					</div>
+				</div>
+			</a>
 
-			<div class = "col-xs-12 col-md-6 col-lg-3 proj-with-text">
-				<a href="dataVis.html">
-				<img src="Resources\DataVis.png" alt="DataVis img"> 
-				</a>
-				<p>Philadelphia Food Delivery Data Visualization</p>
-			</div>
+			<a href="dataVis.html">
+				<div class="project-row">
+					<div class="col-md-4 col-sm-4 proj">
+						<img src="Resources\DataVis.png" class="proj-img" alt="DataVis img"> 
+					</div>
+					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
+						<div class="preview-title">Philadelphia Food Delivery Data Visualization</div>
+						<div class="preview-tech">JavaScript, D3, HTML, CSS</div>
+						<div class="preview-summary">Worked alongside a food delivery logistics client to leverage their data to provide insight and analysis on delivery cost efficiency using JavaScript and D3. Created website with data visuals and graphs that enabled restaurants to make better operational decisions that will benefit their profit margins</div>
+					</div>
+				</div>
+			</a>
 		</div>
 
 
