projects page update

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 					</div>
 					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
 						<div class="preview-title">Movie Recommendation App</div>
-						<div class="preview-tech">Python, HTML, CSS, MySQL</div>
+						<div class="preview-tech">Python, HTML, CSS, PostgreSQL</div>
 						<div class="preview-summary">This movie recommendation app recommends movies to users based on actors and genres selected. Then recommends additional movies that the user may like based on other actors that were in the recommended listings. </div>
 					</div>
 				</div>
