added new Spotify Playlist Generator project

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,20 @@
 		</div> 
 
 		<div class = "projects-list">
+
+			<a href="spotifyRec.html">
+				<div class="project-row">
+					<div class="col-md-4 col-sm-4 proj">
+						<img src="Resources\spotifyRec.jpg" class="proj-img" alt="spotifyRec img"> 
+					</div>
+					<div class="col-md-7 col-sm-7 offset-md-1 offset-sm-1 preview">
+						<div class="preview-title">Spotify Playlist Generator</div>
+						<div class="preview-tech">Spotify API, JavaScript, CSS, HTML, Python</div>
+						<div class="preview-summary">Don't you find that finding new songs for your Spotify playlist is quite the hassle? What if I told you this app changes all that? It will generate a list of songs recommendations based on your top songs and you either like it or dislike it and it will add to your playlist just like Tinder swipes. </div>
+					</div>
+				</div>
+			</a>
+
 			<a href="movieRec.html">
 				<div class="project-row">
 					<div class="col-md-4 col-sm-4 proj">
