modified layout and look

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 			</ul>
 		</nav>
 
-		<div class="col-xs-12 center">
+		<div class="project-page-title col-xs-12 center">
 			<h1>Projects</h1>
 			<p>Here are some projects that I have worked on</p>
 		</div> 
