--- a/dataVis.html
+++ b/dataVis.html
@@ -34,7 +34,7 @@
 			<a href="projects.html">< Back </a>
 		</div>
 
-		<div class="col-xs-12 center">
+		<div class="proj-title col-xs-12 center">
 			<h1>Philadelphia Food Delivery Data Visualization</h1>
 		</div> 
 
