--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 		</nav>
 	</div>
 
+	<div class="website-title">
+		<title>Thomas Cheong</title>
+	</div>
 
 	<div class="title">
 		<div class="col-xs-12 center">
@@ -69,9 +72,8 @@
 		</div>
 	</div>
 	<div class = "col-xs-12">
-		<footer>© 2021 by Thomas Cheong</footer>
+		<footer>© 2022 by Thomas Cheong</footer>
 	</div>
-
 
 </body>
 
